Updated Index and Style2

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">katebron</h1>
+        <h1 class="name">Garret Corbett</h1>
       </header>
       <article>
-        <p>I'm an web developer working in Boston, Massachusetts. Far away from my <a href="https://en.wikipedia.org/wiki/Austin,_Texas" target="_blank">central Texas roots</a>. I work for the libraries at <a href="https://www.tufts.edu/">Tufts University</a>.
-        <p> Previously I was medical school librarian, but the call of full-time web development won me over.</p>
+        <p>I'm a web developer working in Wilmington, North Carolina at the UNCW Randall Library.</p>
+        <p>My favorite programming languages are PHP and CSS but I am hoping to do more JavaScript programming in the future.</p>
+        <p>In my freetime I enjoy watching televsion shows, playing board and computer games, programming, and general tomfoolery.</p>
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:katebron@gmail.com">katebron@gmail.com</a></li>
+        <li><a href="mailto:corbettg@gmail.com">corbettg@gmail.com</a></li>
         <!--Commented out twitter as it now functions as 100% politics<li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>-->
-        <li><a href="http://www.github.com/katebron" target="_blank">github/katebron</a></li>
+        <li><a href="http://www.github.com/corbettg" target="_blank">github/corbettg</a></li>
       </ul>
     </footer>
   </div>
