--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Montserrat" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/style2.css">
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Demo website</title>
@@ -15,15 +15,15 @@
       </header>
       <article>
         <p>I'm a web developer working in Wilmington, North Carolina at the UNCW Randall Library.</p>
-        <p>My favorite programming languages are PHP and CSS but I am hoping to do more JavaScript programming in the future.</p>
+        <p>My favorite programming languages are PHP and CSS but I am planning to do more JavaScript programming in the future.</p>
         <p>In my freetime I enjoy watching televsion shows, playing board and computer games, programming, and general tomfoolery.</p>
       </article>
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:corbettg@gmail.com">corbettg@gmail.com</a></li>
+        <li><a href="mailto:corbettg@gmail.com">&lt;&lt; corbettg@gmail.com &gt;&gt;</a></li>
         <!--Commented out twitter as it now functions as 100% politics<li><a href="http://www.twitter.com/jllord" target="_blank">twitter/jllord</a></li>-->
-        <li><a href="http://www.github.com/corbettg" target="_blank">github/corbettg</a></li>
+        <li><a href="http://www.github.com/corbettg" target="_blank">&lt;&lt; github/corbettg &gt;&gt;</a></li>
       </ul>
     </footer>
   </div>
